Added help menu, file browsers, several dependencies and exception handlers.

--- a/AdvancedModdingStation/Form1.resx
+++ b/AdvancedModdingStation/Form1.resx
@@ -123,4 +123,89 @@
   <metadata name="menuStripMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
   </metadata>
+  <metadata name="imageListExplorerIcons.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>272, 17</value>
+  </metadata>
+  <data name="imageListExplorerIcons.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAE
+        CAAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/5cAARYBGykADnoHAAJH
+        KQAOegYAAZQBvQFHAf8CAAEbJQAOegQAARYCRwEAAkcCAAJHARojAA56AgABFgNHAgACRwMAA0cB9CEA
+        DnoCAAJHARcDAAH1AUcB9AMAA0chAA56AwABFgNHAgACRwEAA0cBGiIADnoFAAEWAUcCAAJHAQABRwEa
+        JAAGmgh6CQAB/wFHARomAAc4B3oKAAJHJgAB9AU4+QABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEABP8EAAT/BAAC/wH8Af8EAAGAAQEB/AH/BAABgAEBAfgBbwQAAYABAQHiAWMEAAGA
+        AQEBhgFwBAABgAEBAY4BOAQAAYABAQHDASEEAAGAAQEB8wEnBAABgAEBAf8BHwQAAYABAQH/AZ8EAAGB
+        A/8EAAT/BAAE/wQABP8EAAs=
+</value>
+  </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="BtnPrevSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAFOSURBVEhL7dWxK0VhGMfxY1GSQXdRFqv/wKZM6iYlkUVM
+        FpncQUoxWA1G/4KZMknJIBlkUFKKQd0sDAwc36fb03nPe35ul16b4XPr/nqe3/sO556b5Xn+52SYmgxT
+        k2FqMkwtyzb46MwITvCEM4xBzVXJsGoUz8gDr6hDzZfJsGwcLwgPcG+YhtoryLAwBbuxOsC9Yx5qv0WG
+        LbOwAlUc+8AiVM+3hyzAFlVhO8uo9olwCb85wK2i3BkFK1CL7g6TuAoyZR1Fb/BlDWrB3WAYNjuES6g5
+        t43SIZtQg+4aVuzzZgDnUPNuB1023AhC5QKDCA9wNdhbQO25LRtsRmHoFHbjuDzUjyOofdO0odsodMew
+        grhU6cUBVM+9DUwg/tEdog9xWTs92EfY84k5H7AXnT0tj9iD3Sws6FQ3dvEAe8xn8P/P+DMyTE2GaeXZ
+        F8axy2QMYeynAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="BtnNextSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAFZSURBVEhLtdS/K0VhHMfxY1GSQXdRFqv/wKZMSlISWcRk
+        kYlB6tY1WA1G/4KZMknJIBlkUFKKQd0sDAw83l9Pj/uc53zc0GN43e75nO+Pc+qcUzjn/p0Mc5NhbjLM
+        TYa5FUWdn7obwznusYNuhHO/0Ylt3OEC0/hcMo5XuMg+epAOaacLu4jnvGPWTl5HYewQvUiHKXbne1Bz
+        bq2gmYSxY/QhHRqzCzmA6jdNK1pNwtQZ+pEONzUcQfUFG6G4EYXKJQYQL7A7PIWqD7bQETetQRUGVxiE
+        1dpCexpVXbAJP/vrj7cM1RDcYAL2eKrzwTpac0sH3iLeoJp/YgXlmZXAm8dfFi2hOk+G3gzSl/Q7dkEL
+        UHPaLjGTeIYaHNiFzEH1ezIsG8UT1IIXTEH1tciwahiPiBfYHdqHVdWXyVAbgr3dDzjBCFRdlfr+5ybD
+        3GSYmwxzk2FervgAzD3LZIfa/ZgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="BtnCloseSearch.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAFQSURBVEhLtdQ7SkNBGMXx7MTOxsq1CCIEX4j4AB8rmFVY
+        2Fq5CkGbgJW1YCMWKtqI4FvHc5Lce78Mf7ux+DUnM+e7N5lJL+f87zCsDcPaMKwNw9o4THlKTuRK+uLs
+        L3NyKacyjX0YpnwmeexDVqQstwV5k2btAPswTPkubLR3WZZywIvEdQ/Yh2HKq/IVNpvfaEn8+byUA35k
+        C/swHBVtyqfEIhcfyFPI7Fv2hfsw7L4SD3JBLCR7MtyDfRh2Q2xDyidvPMuutOuxD8OwaexQaMiRTKzF
+        PgwnN/pHvhca8iiL0q7HPgy7TXRMSxP3CPsw7AbEi2Y+bcfyGjJrB2EfhqO/CnqDHfHn61KeOl/YPvZh
+        mPJN2Gy+aMN7EPh4lxf2FvswTPk8bKQBjXLQBfZhmPKMDMRvtC1lebQm1+IHm8U+CmvDsDYMa8OwNgzr
+        yr1fx4x+5skp88gAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>81</value>
+  </metadata>
 </root>
